# image-compositor

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  compile.sh  static-vars.md
examples/: CMakeLists.txt
examples/visualization/: CMakeLists.txt  Makefile  run.bash  visualization.cc
examples/visualization/scripts/: run_local.bash  run_piz_daint_4_nodes.bash  run_sapling_4_nodes.bash
examples/visualization_1/: Makefile  run.bash  visualization_1.cc
examples/visualization_1/scripts/: run_local.bash  run_piz_daint_4_nodes.bash  run_sapling_4_nodes.bash
examples/visualization_2/: Makefile  render.cc  render.h  renderCube.cc  run.bash  standalone_render.cc  visualization_2.rg  visualization_2_mapper.cc  visualization_2_mapper.h
examples/visualization_2/scripts/: run_piz_daint_8_nodes.bash  run_sapling.bash
examples/visualization_3/: CMakeLists.txt  allinputsgridwriter.py  compile.sh  env.sh  image.cc  image.h  main.cc  ovr  render.cc  render.h  run-optix7.sh  run-ospray.sh  run.sh  run_commands.txt  s3d_projection.h  s3d_projection_backup.h  test_blend.py  visualization_3  visualization_3.rg  visualization_3_mapper.cc  visualization_3_mapper.h  viz_3.h  volume.py
examples/visualization_3/scripts/: makeVideo.bash
include/: KDTree.hpp  KDTreeTest.cpp  image_reduction.h  image_reduction_composite.h  image_reduction_mapper.h  image_reduction_projection_functor.h  legion_visualization.h  usec_timer.h
src/: CMakeLists.txt  image_reduction.cc  image_reduction.h  image_reduction_composite.cc  image_reduction_composite.h  image_reduction_mapper.cc  image_reduction_projection_functor.cc  legion_visualization.h
test/: Makefile  visualization_reductions.cc  visualization_reductions.h
test/visualization/: CMakeLists.txt  Makefile  run.bash  visualization_reductions.cc
test/visualization/visualization_test_1/: Makefile  run.bash  visualization_test_1.cc
test/visualization/visualization_test_2/: Makefile
test/visualization/visualization_test_3/: Makefile  run.bash  visualization_test_3.cc
test/visualization_test_1/: Makefile  run_multi_node.bash  run_piz_daint.bash  run_sherlock.bash  run_single_node.bash  visualization_test_1.cc
test/visualization_test_2/: Makefile  run.bash  run_multi_node.bash  run_piz_daint.bash  run_sherlock.bash  visualization_test_2.cc
test/visualization_test_3/: Makefile  run.bash  run_multi_node.bash  run_piz_daint.bash  run_single_node.bash  visualization_test_3.cc
